--- a/index.html
+++ b/index.html
@@ -1,112 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Do You Love Me?</title>
+  <meta charset="UTF-8">
+  <title>For Sufiya 💖</title>
 
-<style>
-  body {
-    height: 100vh;
-    margin: 0;
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Segoe UI', sans-serif;
-    overflow: hidden;
-  }
+  <style>
+    body {
+      height: 100vh;
+      margin: 0;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Segoe UI', sans-serif;
+      overflow: hidden;
+    }
 
-  h1 {
-    color: #fff;
-    font-size: 36px;
-    margin-bottom: 30px;
-    text-shadow: 2px 2px 5px #00000050;
-  }
+    h1 {
+      color: white;
+      font-size: 38px;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
+      text-align: center;
+      margin-bottom: 10px;
+    }
 
-  .buttons {
-    position: relative;
-  }
+    p {
+      color: white;
+      font-size: 20px;
+      margin-bottom: 30px;
+    }
 
-  button {
-    padding: 14px 30px;
-    font-size: 20px;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    margin: 10px;
-  }
+    .buttons {
+      position: relative;
+      height: 120px;
+    }
 
-  #yesBtn {
-    background: #ff4d6d;
-    color: white;
-  }
+    button {
+      padding: 14px 30px;
+      font-size: 20px;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      position: absolute;
+    }
 
-  #noBtn {
-    background: white;
-    color: #ff4d6d;
-    position: absolute;
-  }
+    #yesBtn {
+      background: #ff4d6d;
+      color: white;
+      left: 0;
+    }
 
-  .heart {
-    position: absolute;
-    font-size: 24px;
-    animation: float 4s linear infinite;
-  }
-
-  @keyframes float {
-    0% { transform: translateY(0); opacity: 1; }
-    100% { transform: translateY(-600px); opacity: 0; }
-  }
-</style>
+    #noBtn {
+      background: white;
+      color: #ff4d6d;
+      left: 150px;
+    }
+  </style>
 </head>
 
 <body>
 
-<h1>Do you love me? 💖🥺</h1>
+  <!-- Background Music -->
+  <audio autoplay loop>
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+  </audio>
 
-<div class="buttons">
-  <button id="yesBtn">Yes 😍</button>
-  <button id="noBtn">No 😏</button>
-</div>
+  <h1>Do you love me, Sufiya? 💕</h1>
+  <p>— Your Bunny 🐰💖</p>
 
-<audio id="yesSound" src="https://assets.mixkit.co/sfx/preview/mixkit-romantic-notification-1005.mp3"></audio>
-<audio id="noSound" src="https://assets.mixkit.co/sfx/preview/mixkit-quick-jump-arcade-game-239.mp3"></audio>
+  <div class="buttons">
+    <button id="yesBtn" onclick="yesClicked()">Yes 😍</button>
+    <button id="noBtn" onmouseover="moveNo()">No 🙈</button>
+  </div>
 
-<script>
-  const noBtn = document.getElementById("noBtn");
-  const yesBtn = document.getElementById("yesBtn");
-  const yesSound = document.getElementById("yesSound");
-  const noSound = document.getElementById("noSound");
-
-  noBtn.addEventListener("mouseover", () => {
-    noSound.play();
-    const x = Math.random() * 300 - 150;
-    const y = Math.random() * 300 - 150;
-    noBtn.style.transform = `translate(${x}px, ${y}px)`;
-  });
-
-  yesBtn.addEventListener("click", () => {
-    yesSound.play();
-    createHearts();
-    setTimeout(() => {
-      alert("I knew it 😘❤️ Love you forever!");
-    }, 500);
-  });
-
-  function createHearts() {
-    for (let i = 0; i < 20; i++) {
-      const heart = document.createElement("div");
-      heart.className = "heart";
-      heart.innerText = "💖";
-      heart.style.left = Math.random() * window.innerWidth + "px";
-      heart.style.bottom = "0px";
-      heart.style.animationDuration = (Math.random() * 2 + 3) + "s";
-      document.body.appendChild(heart);
-      setTimeout(() => heart.remove(), 5000);
+  <script>
+    function moveNo() {
+      const noBtn = document.getElementById("noBtn");
+      const x = Math.random() * 300 - 150;
+      const y = Math.random() * 150 - 75;
+      noBtn.style.transform = `translate(${x}px, ${y}px)`;
     }
-  }
-</script>
+
+    function yesClicked() {
+      document.body.innerHTML = `
+        <h1>I knew it 😍💖</h1>
+        <p>Sufiya, you just made Bunny the happiest 🐰❤️</p>
+        <h1>Forever us 💍✨</h1>
+      `;
+    }
+  </script>
 
 </body>
 </html>
