--- a/index.html
+++ b/index.html
@@ -1,95 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>For Sufiya 💖</title>
+<meta charset="UTF-8">
+<title>For Sufiya 💖</title>
 
-  <style>
-    body {
-      height: 100vh;
-      margin: 0;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      font-family: 'Segoe UI', sans-serif;
-      overflow: hidden;
-    }
+<style>
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    overflow: hidden;
+  }
 
-    h1 {
-      color: white;
-      font-size: 38px;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
-      text-align: center;
-      margin-bottom: 10px;
-    }
+  /* INTRO SCREEN */
+  #intro {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#87ceeb, #fff);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+  }
 
-    p {
-      color: white;
-      font-size: 20px;
-      margin-bottom: 30px;
-    }
+  .cloud {
+    position: absolute;
+    width: 60%;
+    height: 100%;
+    background: white;
+    top: 0;
+    transition: transform 2s ease-in-out;
+  }
 
-    .buttons {
-      position: relative;
-      height: 120px;
-    }
+  .cloud.left {
+    left: 0;
+  }
 
-    button {
-      padding: 14px 30px;
-      font-size: 20px;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      position: absolute;
-    }
+  .cloud.right {
+    right: 0;
+  }
 
-    #yesBtn {
-      background: #ff4d6d;
-      color: white;
-      left: 0;
-    }
+  /* BUNNY */
+  .bunny {
+    font-size: 80px;
+    position: absolute;
+    bottom: 20%;
+    animation: jump 1s infinite alternate;
+  }
 
-    #noBtn {
-      background: white;
-      color: #ff4d6d;
-      left: 150px;
-    }
-  </style>
+  @keyframes jump {
+    from { transform: translateY(0); }
+    to { transform: translateY(-30px); }
+  }
+
+  /* MAIN PAGE */
+  #main {
+    display: none;
+    height: 100vh;
+    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  h1 {
+    color: white;
+    font-size: 38px;
+    text-shadow: 2px 2px 6px rgba(0,0,0,0.3);
+  }
+
+  p {
+    color: white;
+    font-size: 20px;
+    margin-bottom: 30px;
+  }
+
+  .buttons {
+    position: relative;
+    height: 120px;
+  }
+
+  button {
+    padding: 14px 30px;
+    font-size: 20px;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    position: absolute;
+  }
+
+  #yesBtn {
+    background: #ff4d6d;
+    color: white;
+    left: 0;
+  }
+
+  #noBtn {
+    background: white;
+    color: #ff4d6d;
+    left: 150px;
+  }
+
+  .flowers {
+    font-size: 30px;
+    animation: float 3s infinite linear;
+  }
+
+  @keyframes float {
+    from { transform: translateY(0); }
+    to { transform: translateY(-20px); }
+  }
+</style>
 </head>
 
 <body>
 
-  <!-- Background Music -->
-  <audio autoplay loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-  </audio>
+<!-- INTRO -->
+<div id="intro">
+  <div class="cloud left"></div>
+  <div class="cloud right"></div>
+  <div class="bunny">🐰🌸</div>
+</div>
 
-  <h1>Do you love me, Sufiya? 💕</h1>
-  <p>— Your Bunny 🐰💖</p>
+<!-- MUSIC -->
+<audio autoplay loop>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+</audio>
+
+<!-- MAIN PAGE -->
+<div id="main">
+  <h1>Sufiya 💖</h1>
+  <p>Do you love your Bunny? 🐰</p>
 
   <div class="buttons">
     <button id="yesBtn" onclick="yesClicked()">Yes 😍</button>
     <button id="noBtn" onmouseover="moveNo()">No 🙈</button>
   </div>
 
-  <script>
-    function moveNo() {
-      const noBtn = document.getElementById("noBtn");
-      const x = Math.random() * 300 - 150;
-      const y = Math.random() * 150 - 75;
-      noBtn.style.transform = `translate(${x}px, ${y}px)`;
-    }
+  <div class="flowers">🌸 🌼 🌺 💐</div>
+</div>
 
-    function yesClicked() {
-      document.body.innerHTML = `
-        <h1>I knew it 😍💖</h1>
-        <p>Sufiya, you just made Bunny the happiest 🐰❤️</p>
-        <h1>Forever us 💍✨</h1>
-      `;
-    }
-  </script>
+<script>
+  setTimeout(() => {
+    document.querySelector('.cloud.left').style.transform = 'translateX(-100%)';
+    document.querySelector('.cloud.right').style.transform = 'translateX(100%)';
+  }, 1000);
+
+  setTimeout(() => {
+    document.getElementById('intro').style.display = 'none';
+    document.getElementById('main').style.display = 'flex';
+  }, 3000);
+
+  function moveNo() {
+    const noBtn = document.getElementById("noBtn");
+    const x = Math.random() * 300 - 150;
+    const y = Math.random() * 150 - 75;
+    noBtn.style.transform = `translate(${x}px, ${y}px)`;
+  }
+
+  function yesClicked() {
+    document.body.innerHTML = `
+      <h1>Yaaay 😍💖</h1>
+      <p>Sufiya, Bunny loves you forever 🐰🌸</p>
+      <h1>💍✨</h1>
+    `;
+  }
+</script>
 
 </body>
 </html>
