--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <!-- MAIN PAGE -->
 <div id="main">
   <h1>Sufiya 💖</h1>
-  <p>Do you love your Bunny? 🐰</p>
+  <p>Do you love me? 💖🥺</p>
 
   <div class="buttons">
     <button id="yesBtn" onclick="yesClicked()">Yes 😍</button>
