--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   function yesClicked() {
     document.body.innerHTML = `
       <h1>Yaaay 😍💖</h1>
-      <p>Sufiya, Bunny loves you forever 🐰🌸</p>
+      <p>Sufiya, Srini loves you forever 🌸</p>
       <h1>💍✨</h1>
     `;
   }
@@ -171,3 +171,4 @@
 
 </body>
 </html>
+
