--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ function yesClick() {
   document.body.innerHTML = `
     <div style="text-align:center;">
       <img 
-        src="https://media.giphy.com/media/l0MYB8Ory7Hqefo9a/giphy.gif"
-        alt="Bunny Kiss"
+        src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif"
+        alt="Bunny Kissing"
         style="width:240px; border-radius:20px;"
       >
       <h1>Woooo!!!!</h1>
